--- a/dp-meta-lib/dp-meta-lib.csproj
+++ b/dp-meta-lib/dp-meta-lib.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>dw_meta_lib</RootNamespace>
+    <RootNamespace>DPMetaLib</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Data.Odbc" Version="4.5.0" />
     <PackageReference Include="YamlDotNet.NetCore" Version="1.0.0" />
   </ItemGroup>
 
