--- a/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
+++ b/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
@@ -1,45 +1,49 @@
-object_mapping:
+objectMapping:
   extension:
-    - AzP_DV:
-        package_name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
+    - AzP-DV:
+        packageName: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
   source:
-    data_store:
-      connection_key: HSTG
-      connection_description: EDW History Staging Area
-      connection_string: Provider=odbc,etc.
-    data_object:
-      object_schema: dbo
-      object_name: HSTG_MIDAS_INSTITUTION_VW
+    dataStore:
+      connectionKey: HSTG
+      connectionDescription: EDW History Staging Area
+      connectionString: Provider=odbc,etc.
+    dataObject:
+      objectSchema: dbo
+      objectName: HSTG_MIDAS_INSTITUTION_VW
   target:
-    data_store:
-      connection_key: INT
-      connection_description: EDW Integration Area
-      connection_string: Provider=odbc,etc.
-    data_object:
-      object_schema: dbo
-      object_name: SAT_INSTITUTION
+    dataStore:
+      connectionKey: INT
+      connectionDescription: EDW Integration Area
+      connectionString: Provider=odbc,etc.
+    dataObject:
+      objectSchema: dbo
+      objectName: SAT_INSTITUTION
   mappings:
     - source:
-        column_name: INSTITUTION_SK
+        calculation: INSTITUTION_SK
+        code: |
+          CONVERT(CHAR(32), HASHBYTES('MD5',
+                                  ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])),'NA') + '|'
+                                  ), 2)
       target:
-        column_name: INSTITUTION_SK
+        columnName: INSTITUTION_SK
     - source:
-        column_name: OMD_EFFECTIVE_DATETIME
+        columnName: OMD_EFFECTIVE_DATETIME
       target:
-        column_name: OMD_EFFECTIVE_DATETIME
+        columnName: OMD_EFFECTIVE_DATETIME
     - source:
-        column_name: INSTITUTION_NAME
+        columnName: INSTITUTION_NAME
       target:
-        column_name: INSTITUTION_NAME
+        columnName: INSTITUTION_NAME
     - source:
-        column_name: RATING
+        columnName: RATING
       target:
-        column_name: RATING
+        columnName: RATING
     - source:
-        column_name: SEARCH_NAME
+        columnName: SEARCH_NAME
       target:
-        column_name: SEARCH_NAME
+        columnName: SEARCH_NAME
     - source:
-        column_name: STATUS
+        columnName: STATUS
       target:
-        column_name: STATUS
+        columnName: STATUS
