--- a/dp-meta-lib/spec/examples/basic mapping sample.2.yaml
+++ b/dp-meta-lib/spec/examples/basic mapping sample.2.yaml
@@ -1,5 +1,5 @@
 objectMapping:
-  title: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
+  name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
   extension:
     - AzP-DV:
         packageName: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
