--- a/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
+++ b/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
@@ -21,30 +21,42 @@ objectMapping:
       objectName: SAT_INSTITUTION
   mappings:
     - source:
-        calculationName: INSTITUTION_SK
+        columnName: INSTITUTION_SK
+        dataItemType: calculation
         code: |
           CONVERT(CHAR(32), HASHBYTES('MD5',
-                                  ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])),'NA') + '|'
+                                  ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])), 'NA') + '|'
                                   ), 2)
       target:
         columnName: INSTITUTION_SK
+        dataItemType: column
     - source:
         columnName: OMD_EFFECTIVE_DATETIME
+        dataItemType: column
       target:
         columnName: OMD_EFFECTIVE_DATETIME
+        dataItemType: column
     - source:
         columnName: INSTITUTION_NAME
+        dataItemType: column
       target:
         columnName: INSTITUTION_NAME
+        dataItemType: column
     - source:
         columnName: RATING
+        dataItemType: column
       target:
         columnName: RATING
+        dataItemType: column
     - source:
         columnName: SEARCH_NAME
+        dataItemType: column
       target:
         columnName: SEARCH_NAME
+        dataItemType: column
     - source:
         columnName: STATUS
+        dataItemType: column
       target:
         columnName: STATUS
+        dataItemType: column
