Default DataItemType to column

--- a/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
+++ b/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
@@ -23,40 +23,30 @@ objectMapping:
     - source:
         columnName: INSTITUTION_SK
         dataItemType: calculation
+        language: T-SQL
         code: |
           CONVERT(CHAR(32), HASHBYTES('MD5',
                                   ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])), 'NA') + '|'
                                   ), 2)
       target:
         columnName: INSTITUTION_SK
-        dataItemType: column
     - source:
         columnName: OMD_EFFECTIVE_DATETIME
-        dataItemType: column
       target:
         columnName: OMD_EFFECTIVE_DATETIME
-        dataItemType: column
     - source:
         columnName: INSTITUTION_NAME
-        dataItemType: column
       target:
         columnName: INSTITUTION_NAME
-        dataItemType: column
     - source:
         columnName: RATING
-        dataItemType: column
       target:
         columnName: RATING
-        dataItemType: column
     - source:
         columnName: SEARCH_NAME
-        dataItemType: column
       target:
         columnName: SEARCH_NAME
-        dataItemType: column
     - source:
         columnName: STATUS
-        dataItemType: column
       target:
         columnName: STATUS
-        dataItemType: column
