--- a/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
+++ b/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
@@ -1,4 +1,4 @@
-objectMapping:
+dataObjectMapping:
   name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
   extensions:
     - schemaName: AzP-DV
@@ -10,14 +10,14 @@ objectMapping:
     dataObject:
       objectSchema: dbo
       objectName: HSTG_MIDAS_INSTITUTION_VW
-  target:
+  targetDataItem:
     dataStore:
       connectionKey: INT
     dataObject:
       objectSchema: dbo
       objectName: SAT_INSTITUTION
   mappings:
-    - source:
+    - sourceDataItem:
         columnName: INSTITUTION_SK
         dataItemType: calculation
         language: T-SQL
@@ -25,25 +25,25 @@ objectMapping:
           CONVERT(CHAR(32), HASHBYTES('MD5',
                                   ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])), 'NA') + '|'
                                   ), 2)
-      target:
+      targetDataItem:
         columnName: INSTITUTION_SK
-    - source:
+    - sourceDataItem:
         columnName: OMD_EFFECTIVE_DATETIME
-      target:
+      targetDataItem:
         columnName: OMD_EFFECTIVE_DATETIME
-    - source:
+    - sourceDataItem:
         columnName: INSTITUTION_NAME
-      target:
+      targetDataItem:
         columnName: INSTITUTION_NAME
-    - source:
+    - sourceDataItem:
         columnName: RATING
-      target:
+      targetDataItem:
         columnName: RATING
-    - source:
+    - sourceDataItem:
         columnName: SEARCH_NAME
-      target:
+      targetDataItem:
         columnName: SEARCH_NAME
-    - source:
+    - sourceDataItem:
         columnName: STATUS
-      target:
+      targetDataItem:
         columnName: STATUS
