updated missed property name

--- a/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
+++ b/dp-meta-lib/spec/examples/basic mapping sample.1.yaml
@@ -16,7 +16,7 @@ dataObjectMapping:
     dataObject:
       objectSchema: dbo
       objectName: SAT_INSTITUTION
-  mappings:
+  dataObjectMappings:
     - sourceDataItem:
         columnName: INSTITUTION_SK
         dataItemType: calculation
