change structure for extension points

--- a/dp-meta-lib.net/spec/examples/basic mapping sample.1.yaml
+++ b/dp-meta-lib.net/spec/examples/basic mapping sample.1.yaml
@@ -1,9 +1,8 @@
 dataObjectMapping:
   name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
-  extensions:
-    - schemaName: AzP-DV
-      properties:
-        targetType: Satellite
+  ext:
+    AzP-DV:
+      targetType: Satellite
   source:
     dataStore:
       connectionKey: HSTG
