--- a/spec/basic mapping sample.2.yaml
+++ b/spec/basic mapping sample.2.yaml
@@ -1,7 +1,7 @@
 dataObjectMapping:
   name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
   ext:
-    AzP-DV:
+    Core-DV:
       extSchema: example.com/schemas/data_vault/mappings.json
       targetType: Satellite
   source:
