--- a/spec/basic mapping sample.2.yaml
+++ b/spec/basic mapping sample.2.yaml
@@ -1,184 +1,70 @@
-dataObjectMapping:
-  name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
+dataSetMapping:
   ext:
     Core-DV:
       extSchema: example.com/schemas/data_vault/mappings.json
       targetType: Satellite
+  name: module_SRCSYS_SALE_COMPONENT_SAT_SALE_LINE_ITEM
   source:
     dataStore:
       connectionKey: HSTG
     dataObject:
-      sql: |
-        SELECT A.*,
-          COALESCE(SAT2.LKP_OMD_HASH_FULL_RECORD,'N/A') AS LKP_OMD_HASH_FULL_RECORD
-        FROM (
-        SELECT
-          DATEADD(mcs,[OMD_SOURCE_ROW_ID], [OMD_INSERT_DATETIME]) AS [OMD_INSERT_DATETIME],
-          [OMD_RECORD_SOURCE],
-          [OMD_SOURCE_ROW_ID],
-          [OMD_CDC_OPERATION],
-          [OMD_EVENT_DATETIME],
-          CONVERT(CHAR(32), HASHBYTES('MD5',
-                                ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])),'NA') + '|'
-                                ), 2) AS INSTITUTION_SK,
-          [COUNTRY_CODE],
-          [COUNTRY_STATE_CODE],
-          [INSTITUTION_NAME],
-          [NOTES],
-          [RATING],
-          [SEARCH_NAME],
-          [STATUS],
-          [URL],
-          CAST(
-            ROW_NUMBER() OVER (PARTITION  BY
-            CONVERT(CHAR(32), HASHBYTES('MD5',
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])), 'NA') + '|'
-            ),2),
-            [OMD_INSERT_DATETIME]
-            ORDER BY
-            CONVERT(CHAR(32),HASHBYTES('MD5',
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),[INSTITUTION_ID])),'NA')+'|'
-            ),2),
-            OMD_INSERT_DATETIME) AS INT)
-          AS [ROW_NUMBER],
-          CONVERT(CHAR(32),HASHBYTES('MD5',
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),OMD_CDC_OPERATION)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),COUNTRY_CODE)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),COUNTRY_STATE_CODE)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),INSTITUTION_NAME)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),NOTES)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),RATING)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),SEARCH_NAME)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),STATUS)),'NA')+'|'+
-            ISNULL(RTRIM(CONVERT(NVARCHAR(100),URL)),'NA')+'|'
-          ),2) AS OMD_HASH_FULL_RECORD
-        FROM
-          (
-            SELECT
-            [OMD_INSERT_DATETIME],
-            [OMD_RECORD_SOURCE],
-            [OMD_SOURCE_ROW_ID],
-            [OMD_CDC_OPERATION],
-            [OMD_EVENT_DATETIME],
-            [INSTITUTION_ID],
-            [COUNTRY_CODE],
-            [COUNTRY_STATE_CODE],
-            [INSTITUTION_NAME],
-            [NOTES],
-            [RATING],
-            [SEARCH_NAME],
-            [STATUS],
-            [URL],
-            COMBINED_VALUE,
-            CASE
-              WHEN LAG(COMBINED_VALUE,1) OVER (PARTITION BY
-                    [INSTITUTION_ID]
-                    ORDER BY OMD_INSERT_DATETIME ASC, OMD_EVENT_DATETIME ASC, OMD_CDC_OPERATION DESC, OMD_SOURCE_ROW_ID ASC) = COMBINED_VALUE
-              THEN 'Same'
-              ELSE 'Different'
-            END AS VALUE_CHANGE_INDICATOR,
-            CASE
-              WHEN LAG(OMD_CDC_OPERATION,1,'') OVER (PARTITION BY
-                    [INSTITUTION_ID]
-                    ORDER BY OMD_INSERT_DATETIME ASC, OMD_EVENT_DATETIME ASC, OMD_CDC_OPERATION ASC, OMD_SOURCE_ROW_ID ASC) = OMD_CDC_OPERATION
-              THEN 'Same'
-              ELSE 'Different'
-            END AS CDC_CHANGE_INDICATOR,
-            CASE
-              WHEN LEAD(OMD_INSERT_DATETIME,1,'9999-12-31') OVER (PARTITION BY
-                    [INSTITUTION_ID]
-                    ORDER BY OMD_INSERT_DATETIME ASC, OMD_EVENT_DATETIME ASC, OMD_CDC_OPERATION ASC, OMD_SOURCE_ROW_ID ASC) = OMD_INSERT_DATETIME
-              THEN 'Same'
-              ELSE 'Different'
-            END AS TIME_CHANGE_INDICATOR
-            FROM
-            (
-            SELECT
-              [OMD_INSERT_DATETIME],
-              [OMD_RECORD_SOURCE],
-              [OMD_SOURCE_ROW_ID],
-              [OMD_CDC_OPERATION],
-              [OMD_EVENT_DATETIME],
-              [INSTITUTION_ID] AS [INSTITUTION_ID],
-              CONVERT(CHAR(32),HASHBYTES('MD5',
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),COUNTRY_CODE)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),COUNTRY_STATE_CODE)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),INSTITUTION_NAME)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),NOTES)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),RATING)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),SEARCH_NAME)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),STATUS)),'NA')+'|'+
-                    ISNULL(RTRIM(CONVERT(NVARCHAR(100),URL)),'NA')+'|'
-              ),2) AS COMBINED_VALUE,
-              [COUNTRY_CODE],
-              [COUNTRY_STATE_CODE],
-              [INSTITUTION_NAME],
-              [NOTES],
-              [RATING],
-              [SEARCH_NAME],
-              [STATUS],
-              [URL]
-            FROM STG_MIDAS_INSTITUTION_VW main
-            WHERE INSTITUTION_ID IS NOT NULL
-            ) B
-          ) sub
-        WHERE
-          (VALUE_CHANGE_INDICATOR ='Different' and OMD_CDC_OPERATION in ('Insert', 'Update')) --value change / the first insert record
-          OR
-          (CDC_CHANGE_INDICATOR = 'Different' and TIME_CHANGE_INDICATOR = 'Different') --genuine delete / reinsert a deleted record
-        )A
-        LEFT JOIN [EDW_200_Integration_Layer].dbo.SAT_INSTITUTION SAT
-          ON
-            A.INSTITUTION_SK=SAT.INSTITUTION_SK AND
-            A.OMD_INSERT_DATETIME=SAT.OMD_EFFECTIVE_DATETIME
-        LEFT JOIN (
-            SELECT
-            A.INSTITUTION_SK,
-            A.OMD_HASH_FULL_RECORD AS LKP_OMD_HASH_FULL_RECORD
-              FROM [EDW_200_Integration_Layer].dbo.SAT_INSTITUTION A
-                      JOIN (
-                        SELECT
-                          INSTITUTION_SK,
-                          MAX(OMD_EFFECTIVE_DATETIME) as MAX_OMD_EFFECTIVE_DATETIME
-                          FROM [EDW_200_Integration_Layer].dbo.SAT_INSTITUTION
-                          WHERE OMD_CURRENT_RECORD_INDICATOR='Y'
-                          GROUP BY INSTITUTION_SK
-                        )B
-                        ON
-                        A.INSTITUTION_SK=B.INSTITUTION_SK AND
-                        A.OMD_EFFECTIVE_DATETIME = B.MAX_OMD_EFFECTIVE_DATETIME
-                      )SAT2
-                      ON
-                        A.INSTITUTION_SK=SAT2.INSTITUTION_SK
-            WHERE SAT.INSTITUTION_SK IS NULL
-  targetDataItem:
+      objectType: query
+      language: T-SQL
+      code: |
+        select src.*
+        from    (
+                select SALE_COMPONENT.OMD_RECORD_SOURCE + N'_' + convert(nvarchar(100), SALE_COMPONENT.SALE_COMPONENT_ID) as SALE_LINE_ITEM_SK,
+                    SALE_COMPONENT.OMD_CHANGE_DATETIME,
+                    case when SALE_COMPONENT.OMD_CDC_OPERATION = 'DELETED' then 'Y' else 'N' end as OMD_DELETED_RECORD,
+                    SALE_COMPONENT.COMPONENT_TYPE_ID,
+                    SALE_COMPONENT.CHANGE_AMOUNT,
+                    SALE_COMPONENT.OMD_INSERT_DATETIME,
+                    SALE_COMPONENT.OMD_INSERT_MODULE_INSTANCE_ID,
+                    SALE_COMPONENT.OMD_CHANGE_KEY
+                from EDW_Staging_Area.dbo.SRCSYS_SALE_COMPONENT SALE_COMPONENT
+                ) as src
+        where not exists (
+                select null
+                from EDW_Integration_Layer.dbo.SAT_SALE_LINE_ITEM
+                where SAT_SALE_LINE_ITEM.SALE_LINE_ITEM_SK = src.SALE_LINE_ITEM_SK
+                    and SAT_SALE_LINE_ITEM.OMD_CHANGE_KEY = src.OMD_CHANGE_KEY
+                );
+  target:
     dataStore:
       connectionKey: INT
     dataObject:
       objectSchema: dbo
-      objectName: SAT_INSTITUTION
-  dataObjectMappings:
+      objectName: SAT_SALE_LINE_ITEM
+  mappedDataItems:
     - sourceDataItem:
-        columnName: INSTITUTION_SK
+        columnName: SALE_LINE_ITEM_SK
       targetDataItem:
-        columnName: INSTITUTION_SK
+        columnName: SALE_LINE_ITEM_SK
     - sourceDataItem:
-        columnName: OMD_EFFECTIVE_DATETIME
+        columnName: OMD_CHANGE_DATETIME
       targetDataItem:
-        columnName: OMD_EFFECTIVE_DATETIME
+        columnName: OMD_CHANGE_DATETIME
     - sourceDataItem:
-        columnName: INSTITUTION_NAME
+        columnName: OMD_DELETED_RECORD
       targetDataItem:
-        columnName: INSTITUTION_NAME
+        columnName: OMD_DELETED_RECORD
     - sourceDataItem:
-        columnName: RATING
+        columnName: COMPONENT_TYPE_ID
       targetDataItem:
-        columnName: RATING
+        columnName: SRCSYS_COMPONENT_TYPE_ID
     - sourceDataItem:
-        columnName: SEARCH_NAME
+        columnName: CHARGE_AMOUNT
       targetDataItem:
-        columnName: SEARCH_NAME
+        columnName: AMOUNT_CONTRIBUTED
     - sourceDataItem:
-        columnName: STATUS
+        columnName: OMD_INSERT_DATETIME
       targetDataItem:
-        columnName: STATUS
+        columnName: OMD_INSERT_DATETIME
+    - sourceDataItem:
+        columnName: OMD_INSERT_MODULE_INSTANCE_ID
+      targetDataItem:
+        columnName: OMD_INSERT_MODULE_INSTANCE_ID
+    - sourceDataItem:
+        columnName: OMD_CHANGE_KEY
+      targetDataItem:
+        columnName: OMD_CHANGE_KEY
