--- a/spec/basic mapping sample.1.yaml
+++ b/spec/basic mapping sample.1.yaml
@@ -1,13 +1,13 @@
 dataSetMapping:
   name: m_200_MIDAS_INSTITUTION_VW_SAT_INSTITUTION
-  ext:
+  extension:
     Core-DV:
       extSchema: example.com/schemas/data_vault/mappings.json
       targetType: Satellite
   source:
     dataStore:
       connectionKey: HSTG
-    dataObject:
+    dataSet:
       objectSchema: dbo
       objectName: HSTG_MIDAS_INSTITUTION_VW
   target:
@@ -18,32 +18,31 @@ dataSetMapping:
       objectName: SAT_INSTITUTION
   mappedDataItems:
     - sourceDataItem:
-        columnName: INSTITUTION_SK
-        dataItemType: calculation
+        calculationName: INSTITUTION_SK
         language: T-SQL
         code: |
           CONVERT(CHAR(32), HASHBYTES('MD5',
                                   ISNULL(RTRIM(CONVERT(NVARCHAR(100), [INSTITUTION_ID])), 'NA') + '|'
                                   ), 2)
-      targetDataItem:
+      targetColumn:
         columnName: INSTITUTION_SK
     - sourceDataItem:
         columnName: OMD_EFFECTIVE_DATETIME
-      targetDataItem:
+      targetColumn:
         columnName: OMD_EFFECTIVE_DATETIME
     - sourceDataItem:
         columnName: INSTITUTION_NAME
-      targetDataItem:
+      targetColumn:
         columnName: INSTITUTION_NAME
     - sourceDataItem:
         columnName: RATING
-      targetDataItem:
+      targetColumn:
         columnName: RATING
     - sourceDataItem:
         columnName: SEARCH_NAME
-      targetDataItem:
+      targetColumn:
         columnName: SEARCH_NAME
     - sourceDataItem:
         columnName: STATUS
-      targetDataItem:
+      targetColumn:
         columnName: STATUS
